--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "inventory-management-app",
+  "name": "pharmacy-management-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
